--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_bg.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_bg.properties
@@ -1798,6 +1798,7 @@ client-secret-id=Client Secret ID (Automatic Copy)
 client-version=Версия на клиента (Automatic Translation)
 clock-skew=Часовник изкрив (Automatic Translation)
 clock-skew-description=Задайте времето в милисекунди, които могат да се различават преди код ще бъде отхвърлен. Това означава, че проверяващата може да извърши проверка срещу текущото време и след това две допълнителни валидирания (+ часовник изкривяване време / - време на изкривяване на часовника). (Automatic Translation)
+close-fields-menu=Close fields menu (Automatic Copy)
 cluster-executor-configuration-name=Клъстерен изпълнител (Automatic Translation)
 cluster-name=Име на клъстер (Automatic Translation)
 cluster-name-help=Тази конфигурация се отнася само за В EMBEDDED (Разредка) режим. Задайте името на клъстера да се присъедини. (Automatic Translation)
@@ -6233,6 +6234,7 @@ open-actions-menu=Отваряне на менюто "Действия" (Automat
 open-analytics-cloud=Отворете облака на Google Анализ (Automatic Translation)
 open-commerce-order-content-web-portlet-instance-configuration-name=Open Carts (Automatic Copy)
 open-developer-tools-in-the-browser-to-see-the-selected-occurrence=Отворете инструментите за разработчици в браузъра, за да видите избраното събитие. (Automatic Translation)
+open-fields-menu=Open fields menu (Automatic Copy)
 open-form=Отваряне на формуляр (Automatic Translation)
 open-graph=Отвори графика (Automatic Translation)
 open-graph-alt-description=Описание на alt (Automatic Translation)
