--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ca.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ca.properties
@@ -1798,6 +1798,7 @@ client-secret-id=ID del secret de client
 client-version=Versió del client
 clock-skew=Biaix del rellotge
 clock-skew-description=Estableix el temps en mil·lisegons que els rellotges poden variar abans de rebutjar un codi. Això vol dir que el verificador podria executar una validació en relació a l'hora actual i després dues validacions més (+ biaix del rellotge / - biaix del rellotge).
+close-fields-menu=Close fields menu (Automatic Copy)
 cluster-executor-configuration-name=Executor de clústers
 cluster-name=Nom del clúster
 cluster-name-help=El nom del clúster al qual s'ha d'unir. El nom ha de coincidir amb el clúster remot quan el Mode d'operació està configurat com a remot.
@@ -6233,6 +6234,7 @@ open-actions-menu=Obre el menú d'accions
 open-analytics-cloud=Obre Analytics Cloud
 open-commerce-order-content-web-portlet-instance-configuration-name=Cistells oberts
 open-developer-tools-in-the-browser-to-see-the-selected-occurrence=Obriu les eines de desenvolupador al navegador per veure l'ocurrència seleccionada.
+open-fields-menu=Open fields menu (Automatic Copy)
 open-form=Obre el formulari
 open-graph=Open Graph
 open-graph-alt-description=Descripció alternativa
