--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_da.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_da.properties
@@ -1798,6 +1798,7 @@ client-secret-id=Client Secret ID (Automatic Copy)
 client-version=Klientversion (Automatic Translation)
 clock-skew=Ur skæv (Automatic Translation)
 clock-skew-description=Angiv den tid i millisekunder, som urene kan variere, før en kode afvises. Det betyder, at kontrolløren kan udføre en validering i forhold til det aktuelle klokkeslæt og derefter yderligere to valideringer (+ klokkeslætsspydtid / - klokkeslætsspydtid). (Automatic Translation)
+close-fields-menu=Close fields menu (Automatic Copy)
 cluster-executor-configuration-name=Eksekutor for klynge (Automatic Translation)
 cluster-name=Klyngenavn (Automatic Translation)
 cluster-name-help=Denne konfiguration gælder kun for EMBEDDED-tilstand (udviklingstilstand). Angiv navnet på den klynge, der skal tilsluttes. (Automatic Translation)
@@ -6233,6 +6234,7 @@ open-actions-menu=Menuen Åbn handlinger (Automatic Translation)
 open-analytics-cloud=Åbn Analytics Cloud (Automatic Translation)
 open-commerce-order-content-web-portlet-instance-configuration-name=Open Carts (Automatic Copy)
 open-developer-tools-in-the-browser-to-see-the-selected-occurrence=Open developer tools in the browser to see the selected occurrence. (Automatic Copy)
+open-fields-menu=Open fields menu (Automatic Copy)
 open-form=Åbn formular (Automatic Translation)
 open-graph=Åbn diagram (Automatic Translation)
 open-graph-alt-description=Beskrivelse af Alt (Automatic Translation)
