--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_el.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_el.properties
@@ -1798,6 +1798,7 @@ client-secret-id=Client Secret ID (Automatic Copy)
 client-version=Έκδοση προγράμματος-πελάτη (Automatic Translation)
 clock-skew=Κλίση ρολογιού (Automatic Translation)
 clock-skew-description=Ορίστε το χρόνο σε χιλιοστά του δευτερολέπτου που μπορεί να διαφέρουν τα ρολόγια πριν από την απόρριψη ενός κώδικα. Αυτό σημαίνει ότι ο ελεγκτής θα μπορούσε να εκτελέσει μια επικύρωση σε σχέση με την τρέχουσα ώρα και στη συνέχεια δύο περαιτέρω επικυρώσεις (+ ρολόι κλίση του χρόνου / - ρολόι κλίση του χρόνου). (Automatic Translation)
+close-fields-menu=Close fields menu (Automatic Copy)
 cluster-executor-configuration-name=Εκτελέστε συμπλέγματος (Automatic Translation)
 cluster-name=Όνομα συμπλέγματος (Automatic Translation)
 cluster-name-help=Αυτή η ρύθμιση παραμέτρων ισχύει μόνο για τη λειτουργία EMBEDDED (Ανάπτυξη). Ορίστε το όνομα του συμπλέγματος για να συμμετάσχετε. (Automatic Translation)
@@ -6233,6 +6234,7 @@ open-actions-menu=Μενού "Άνοιγμα ενεργειών" (Automatic Tran
 open-analytics-cloud=Άνοιγμα σύννεφου ανάλυσης (Automatic Translation)
 open-commerce-order-content-web-portlet-instance-configuration-name=Open Carts (Automatic Copy)
 open-developer-tools-in-the-browser-to-see-the-selected-occurrence=Ανοίξτε τα εργαλεία προγραμματιστή στο πρόγραμμα περιήγησης για να δείτε την επιλεγμένη εμφάνιση. (Automatic Translation)
+open-fields-menu=Open fields menu (Automatic Copy)
 open-form=Άνοιγμα φόρμας (Automatic Translation)
 open-graph=Άνοιγμα γραφήματος (Automatic Translation)
 open-graph-alt-description=Περιγραφή Alt (Automatic Translation)
