--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_es.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_es.properties
@@ -1798,6 +1798,7 @@ client-secret-id=Identificador de secreto de cliente
 client-version=Versión del cliente
 clock-skew=Sesgo de reloj
 clock-skew-description=Establece el tiempo (en milisegundos) en que los relojes pueden ser distintos antes de que se rechace un código. Esto quiere decir que el comprobador debe realizar una validación de la hora actual y, después, dos validaciones adicionales (+ hora de desfase de reloj/ - hora de desfase de reloj).
+close-fields-menu=Close fields menu (Automatic Copy)
 cluster-executor-configuration-name=Grupo ejecutor
 cluster-name=Nombre del clúster
 cluster-name-help=El nombre del clúster al que unirse. El nombre debe coincidir con el clúster remoto cuando el modo de operación se establece en REMOTE (remoto).
@@ -6233,6 +6234,7 @@ open-actions-menu=Abrir menú de acciones
 open-analytics-cloud=Abrir Analytics Cloud
 open-commerce-order-content-web-portlet-instance-configuration-name=Cestas abiertas
 open-developer-tools-in-the-browser-to-see-the-selected-occurrence=Abra las herramientas de desarrollo en el navegador para ver la coincidencia seleccionada.
+open-fields-menu=Open fields menu (Automatic Copy)
 open-form=Abrir formulario
 open-graph=Open Graph
 open-graph-alt-description=Descripción alternativa
