--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl.properties
@@ -1798,6 +1798,7 @@ client-secret-id=ID clientgeheim
 client-version=Clientversie
 clock-skew=Tijdafwijking
 clock-skew-description=Stel de tijd in milliseconden in waarna een code wordt geweigerd. Dit houdt in dat bij de controle de huidige tijd wordt gevalideerd, waarna nog twee validaties volgen (tijdverschil klok + / tijdverschil klok -).
+close-fields-menu=Close fields menu (Automatic Copy)
 cluster-executor-configuration-name=Clusteruitvoerder
 cluster-name=Clusternaam
 cluster-name-help=De naam van de cluster voor deelname. De naam moet overeenstemmen met de remote cluster wanneer de werkingsmodus is ingesteld op remote.
@@ -6233,6 +6234,7 @@ open-actions-menu=Actiemenu openen
 open-analytics-cloud=Analytics Cloud openen
 open-commerce-order-content-web-portlet-instance-configuration-name=Open winkelkarren
 open-developer-tools-in-the-browser-to-see-the-selected-occurrence=Open de ontwikkelingstools in de browser om het geselecteerde voorval te zien.
+open-fields-menu=Open fields menu (Automatic Copy)
 open-form=Formulier openen
 open-graph=Open Graph
 open-graph-alt-description=Alt-tekst
