--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pl.properties
@@ -1798,6 +1798,7 @@ client-secret-id=Client Secret ID (Automatic Copy)
 client-version=Wersja klienta (Automatic Translation)
 clock-skew=Pochylenie zegara (Automatic Translation)
 clock-skew-description=Ustaw czas w milisekundach, że zegary mogą się różnić, zanim kod zostanie odrzucony. Oznacza to, że kontroler może wykonać sprawdzanie poprawności względem bieżącego czasu, a następnie dwie kolejne weryfikacje (+ czas pochylenia zegara / - czas pochylenia zegara). (Automatic Translation)
+close-fields-menu=Close fields menu (Automatic Copy)
 cluster-executor-configuration-name=Executor klastra (Automatic Translation)
 cluster-name=Nazwa klastra (Automatic Translation)
 cluster-name-help=Ta konfiguracja dotyczy tylko trybu EMBEDDED (Development). Ustaw nazwę klastra do dołączenia. (Automatic Translation)
@@ -6233,6 +6234,7 @@ open-actions-menu=Menu Otwórz akcje (Automatic Translation)
 open-analytics-cloud=Otwórz chmurę Analytics (Automatic Translation)
 open-commerce-order-content-web-portlet-instance-configuration-name=Otwórz koszyk
 open-developer-tools-in-the-browser-to-see-the-selected-occurrence=Otwórz narzędzia programistyczne w przeglądarce, aby zobaczyć wybrane wystąpienie. (Automatic Translation)
+open-fields-menu=Open fields menu (Automatic Copy)
 open-form=Otwórz formularz (Automatic Translation)
 open-graph=Otwórz wykres (Automatic Translation)
 open-graph-alt-description=Opis alternatywny (Automatic Translation)
