--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_uk.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_uk.properties
@@ -1798,6 +1798,7 @@ client-secret-id=Client Secret ID (Automatic Copy)
 client-version=Версія клієнта (Automatic Translation)
 clock-skew=Годинники косі (Automatic Translation)
 clock-skew-description=Встановити час в мілісекундах, що Годинники можуть відрізнятися, перш ніж код буде відхилено. Це означає, що перевірка може виконати перевірку на поточний час, а потім ще два перевірки (+ годинник зсув часу/годинник нахил час). (Automatic Translation)
+close-fields-menu=Close fields menu (Automatic Copy)
 cluster-executor-configuration-name=Виконавець кластера (Automatic Translation)
 cluster-name=Ім'я кластера (Automatic Translation)
 cluster-name-help=Ця конфігурація застосовується лише до режиму EMBEDDED (Розробка). Установіть ім'я кластера для об'єднання. (Automatic Translation)
@@ -6233,6 +6234,7 @@ open-actions-menu=Відкрити меню дій (Automatic Translation)
 open-analytics-cloud=Відкрити хмару аналітики (Automatic Translation)
 open-commerce-order-content-web-portlet-instance-configuration-name=Open Carts (Automatic Copy)
 open-developer-tools-in-the-browser-to-see-the-selected-occurrence=Відкрийте інструменти розробника у браузері, щоб побачити вибраний екземпляр. (Automatic Translation)
+open-fields-menu=Open fields menu (Automatic Copy)
 open-form=Відкрити форму (Automatic Translation)
 open-graph=Відкрити графік (Automatic Translation)
 open-graph-alt-description=Опис заміщення (Automatic Translation)
