--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_TW.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_TW.properties
@@ -1798,6 +1798,7 @@ client-secret-id=客戶端密鑰 ID
 client-version=客戶端版本
 clock-skew=Clock Skew
 clock-skew-description=設置時鐘在拒絕代碼之前可能不同的時間(以毫秒為單位)。這意味著檢查器可以針對當前時間執行驗證,然後執行兩個進一步的驗證(+ 時鐘偏斜時間 / - 時鐘偏斜時間)。 (Automatic Translation)
+close-fields-menu=Close fields menu (Automatic Copy)
 cluster-executor-configuration-name=叢集執行者
 cluster-name=叢級名稱
 cluster-name-help=此配置僅適用於嵌入式（開發）模式。設置要加入的集群名稱。 (Automatic Translation)
@@ -6233,6 +6234,7 @@ open-actions-menu=打開操作選單
 open-analytics-cloud=開啟 Analytics Cloud
 open-commerce-order-content-web-portlet-instance-configuration-name=打開購物車
 open-developer-tools-in-the-browser-to-see-the-selected-occurrence=在流覽器中打開開發者工具以查看所選匹配項。
+open-fields-menu=Open fields menu (Automatic Copy)
 open-form=開啟表單
 open-graph=Open Graph
 open-graph-alt-description=Alt 描述
