--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fa.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fa.properties
@@ -1798,6 +1798,7 @@ client-secret-id=Client Secret ID (Automatic Copy)
 client-version=نسخه‌ی مشتری
 clock-skew=انحراف ساعت (Automatic Translation)
 clock-skew-description=تنظیم زمان در میلی ثانیه که ساعت می تواند متفاوت باشد قبل از کد رد خواهد شد. این به این معنی است که checker می تواند یک اعتبار را در برابر زمان فعلی انجام دهد و سپس دو اعتبار سنجی بیشتر (زمان انحراف ساعت/ساعت انحراف). (Automatic Translation)
+close-fields-menu=Close fields menu (Automatic Copy)
 cluster-executor-configuration-name=مجری کلاسترینگ
 cluster-name=نام کلاسترینگ
 cluster-name-help=این پیکربندی فقط در حالت EMBEDDED (توسعه) اعمال می شود. نام خوشه را برای پیوستن تنظیم کنید. (Automatic Translation)
@@ -6233,6 +6234,7 @@ open-actions-menu=منوی اعمال باز (Automatic Translation)
 open-analytics-cloud=ابر تجزیه و تحلیل باز (Automatic Translation)
 open-commerce-order-content-web-portlet-instance-configuration-name=Open Carts (Automatic Copy)
 open-developer-tools-in-the-browser-to-see-the-selected-occurrence=ابزارهای توسعه دهنده را در مرورگر باز کنید تا رخداد انتخاب شده را ببینید. (Automatic Translation)
+open-fields-menu=Open fields menu (Automatic Copy)
 open-form=فرم باز (Automatic Translation)
 open-graph=گراف باز
 open-graph-alt-description=شرح آلت (Automatic Translation)
