--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nb.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nb.properties
@@ -1798,6 +1798,7 @@ client-secret-id=Client Secret ID (Automatic Copy)
 client-version=Klientversjon (Automatic Translation)
 clock-skew=Klokke Skew (Automatic Translation)
 clock-skew-description=Angi tiden i millisekunder som klokkene kan variere før en kode blir avvist. Dette betyr at kontrollør kan utføre en validering mot gjeldende tid og deretter to ytterligere valideringer (+ klokke skjev tid / - klokke skjev tid). (Automatic Translation)
+close-fields-menu=Close fields menu (Automatic Copy)
 cluster-executor-configuration-name=Kjøring av klynge (Automatic Translation)
 cluster-name=Navn på klynge (Automatic Translation)
 cluster-name-help=Denne konfigurasjonen gjelder bare for EMBEDDED-modus (utvikling). Angi navnet på klyngen som skal kobles sammen. (Automatic Translation)
@@ -6233,6 +6234,7 @@ open-actions-menu=Åpne handlingsmeny
 open-analytics-cloud=Åpne analytics cloud
 open-commerce-order-content-web-portlet-instance-configuration-name=Open Carts (Automatic Copy)
 open-developer-tools-in-the-browser-to-see-the-selected-occurrence=Åpne utviklerverktøy i nettleseren for å se den valgte forekomsten. (Automatic Translation)
+open-fields-menu=Open fields menu (Automatic Copy)
 open-form=Åpne skjema (Automatic Translation)
 open-graph=Åpne diagram (Automatic Translation)
 open-graph-alt-description=Alt-beskrivelse
