--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_BR.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_BR.properties
@@ -1798,6 +1798,7 @@ client-secret-id=ID de segredo do cliente
 client-version=Versão do cliente
 clock-skew=Desvio de Hora
 clock-skew-description=Definir o tempo em milissegundos em que os relógios podem diferir antes que um código seja rejeitado. Isto significa que o verificador pode executar uma validação em relação à hora atual e, em seguida, mais duas validações (+ tempo de defasagem horária / - tempo de defasagem horária).
+close-fields-menu=Close fields menu (Automatic Copy)
 cluster-executor-configuration-name=Executor do cluster
 cluster-name=Nome do cluster
 cluster-name-help=O nome do cluster a se juntar. O nome deve coincidir com o cluster remoto quando o Modo de Operação for definido para remoto.
@@ -6233,6 +6234,7 @@ open-actions-menu=Abrir Menus de Ações
 open-analytics-cloud=Abrir Analytics Cloud
 open-commerce-order-content-web-portlet-instance-configuration-name=Cartões abertos
 open-developer-tools-in-the-browser-to-see-the-selected-occurrence=Abrir ferramentas de devtools no navegador para visualizar as ocorrências selecionadas.
+open-fields-menu=Open fields menu (Automatic Copy)
 open-form=Formulário aberto
 open-graph=Open Graph
 open-graph-alt-description=Descrição de Alt
