--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_PT.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_PT.properties
@@ -1798,6 +1798,7 @@ client-secret-id=Client Secret ID (Automatic Copy)
 client-version=Versão do cliente (Automatic Translation)
 clock-skew=Skew do relógio (Automatic Translation)
 clock-skew-description=Defina o tempo em milissegundos que os relógios podem diferir antes que um código seja rejeitado. Isso significa que o verificador pode realizar uma validação em relação ao tempo atual e, em seguida, duas outras validações (+ tempo de inclinação do relógio / - tempo de inclinação do relógio). (Automatic Translation)
+close-fields-menu=Close fields menu (Automatic Copy)
 cluster-executor-configuration-name=Cluster Executor (Automatic Translation)
 cluster-name=Nome do cluster (Automatic Translation)
 cluster-name-help=Esta configuração só se aplica ao modo EMBEDDED (Desenvolvimento). Defina o nome do cluster para participar. (Automatic Translation)
@@ -6233,6 +6234,7 @@ open-actions-menu=Menu de Ações Abertas (Automatic Translation)
 open-analytics-cloud=Nuvem de Análise Aberta (Automatic Translation)
 open-commerce-order-content-web-portlet-instance-configuration-name=Open Carts (Automatic Copy)
 open-developer-tools-in-the-browser-to-see-the-selected-occurrence=Abra ferramentas de desenvolvedor no navegador para ver a ocorrência selecionada. (Automatic Translation)
+open-fields-menu=Open fields menu (Automatic Copy)
 open-form=Formulário Aberto (Automatic Translation)
 open-graph=Gráfico Aberto (Automatic Translation)
 open-graph-alt-description=Alt Description (Automatic Translation)
